Link sign-in button to student page

--- a/loginPageTest01.html
+++ b/loginPageTest01.html
@@ -32,7 +32,14 @@
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg bth-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg bth-primary btn-block" type="submit" onclick="myFunction()">Sign in</button>
     </form>
+    
+    <script>
+        function myFunction() {
+            location.replace("homepageStudentTest01.html")
+        }
+    </script>
+
 </body>
 </html>
