Fixed image url

--- a/loginPageTest01.html
+++ b/loginPageTest01.html
@@ -26,17 +26,17 @@
 </head>
 <body class="text-center">
     <form class="form-signin">
-        <img class="mb-4" src="/imgAssests/ucr_logosquaresmall.png" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <img class="mb-4" src="imgAssests/ucr_logosquaresmall.png" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Please Sign In</h1>
         <label for="inputEmail" class="sr-only">Email Address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg bth-primary btn-block" type="submit" onclick="myFunction()">Sign in</button>
+        <button class="btn btn-lg bth-primary btn-block" type="submit" onclick="signed_in()">Sign in</button>
     </form>
     
     <script>
-        function myFunction() {
+        function signed_in() {
             location.replace("homepageStudentTest01.html")
         }
     </script>
