Fixed sign-in button

--- a/loginPageTest01.html
+++ b/loginPageTest01.html
@@ -32,7 +32,7 @@
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg bth-primary btn-block" type="submit" onclick="signed_in()">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="signed_in()">Sign in</button>
     </form>
     
     <script>
