--- a/loginPageTest01.html
+++ b/loginPageTest01.html
@@ -27,7 +27,7 @@
 <body class="text-center">
     <form class="form-signin">
         <img class="mb-4" src="imgAssests/ucr_logosquaresmall.png" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please Sign In</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email Address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
