--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Login Page Test 01</title>
+    <title>Login Page</title>
     <!--Setting the core Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta name="theme-color" content="#563d7c">
+    <!--favicon-->
     <style>
         .signIn-test-image {
             font-size: 1.125rem;
@@ -22,7 +23,7 @@
             }
         }
     </style>
-    <link href="loginPageTest01.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 </head>
 <body class="text-center">
     <form class="form-signin">
@@ -37,7 +38,7 @@
     
     <script>
         function signed_in() {
-            location.replace("homepageStudentTest01.html")
+            location.replace("student.html")
         }
     </script>
 
