Basic Firebase Authentication working Not yet linked to Google Calendar API / student homepage Updated login page, favicons, and page names

--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,107 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Login Page</title>
+    <title>UR'Plan | Your Personalized, Automated Course Planner 📚</title>
     <!--Setting the core Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <meta name="theme-color" content="#563d7c">
-    <!--favicon-->
-    <style>
-        .signIn-test-image {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
+    <link rel='icon' href='assets/ucr.ico' type='image/x-icon'/>
 
-        @media (min-width:768px) {
-            .signIn-test-image-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
     <link href="index.css" rel="stylesheet">
 </head>
-<body class="text-center">
-    <form class="form-signin">
-        <img class="mb-4" src="imgAssests/ucr_logosquaresmall.png" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email Address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="signed_in()">Sign in</button>
-    </form>
+<body class="text-center">    
+    <nav class="navbar fixed-top navbar-light" style="background-color:rgba(202, 229, 255, 0.8);">
+        <div class="container-fluid" style="display:flex;">
+          <div class="navbar-header" style="flex:1; text-align: left;">
+            <a class="navbar-brand" href="#">
+                <img src="assets/urplan.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                UR'Plan
+            </a>
+          </div>
+          <ul class="nav navbar-nav" style="display: block;">
+            <li><a href="#">About</a></li>
+            <li><a href="https://github.com/samanthavu7/UR-Plan">Documentation</a></li>
+          </ul>
+          <div class="right" style="flex:1"></div>
+        </div>
+    </nav>
     
+    <div id="signIn">
+        <h1>Login</h1>
+        <h2>Start building your course plan.</h2><br> 
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
+    </div>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-auth.js"></script>
+
     <script>
-        function signed_in() {
-            location.replace("student.html")
-        }
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyAITqYy9_z2PlI_MICO1Ob-Ay18mWx6qmk",
+            authDomain: "ur-plan.firebaseapp.com",
+            databaseURL: "https://ur-plan.firebaseio.com",
+            projectId: "ur-plan",
+            storageBucket: "ur-plan.appspot.com",
+            messagingSenderId: "893010591089",
+            appId: "1:893010591089:web:c039574c91b33876768ad0",
+            measurementId: "G-HRDWGFW0QW"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+
+        ui.start('#firebaseui-auth-container', {
+            signInOptions: [
+                {
+                    provider: firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                    scopes: [
+                        'https://www.googleapis.com/auth/calendar'
+                    ],
+                }
+            ]
+        });
+
+        var uiConfig = {
+            callbacks: {
+                signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+                    // User successfully signed in.
+                    // Return type determines whether we continue the redirect automatically
+                    // or whether we leave that to developer to handle.
+                    return true;
+                },
+                uiShown: function() {
+                    // The widget is rendered.
+                    // Hide the loader.
+                    document.getElementById('loader').style.display = 'none';
+                }
+            },
+            // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+            signInFlow: 'popup',
+            signInSuccessUrl: 'student.html',
+            signInOptions: [
+                // Leave the lines as is for the providers you want to offer your users.
+                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+            ],
+            // Terms of service url.
+            tosUrl: '<your-tos-url>',
+            // Privacy policy url.
+            privacyPolicyUrl: '<your-privacy-policy-url>'
+        };
+
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
     </script>
 
 </body>
