--- a/public/student.html
+++ b/public/student.html
@@ -2,26 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Student Homepage</title>
+    <title>Homepage | UR'Plan</title>
     <!--Setting the core Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <meta name="theme-color" content="#563d7c">
-    <style>
-        .signIn-test-image {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width:768px) {
-            .signIn-test-image-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
     <link href="student.css" rel="stylesheet">
 </head>
 <body class="text-center">
@@ -32,7 +15,6 @@
         <a href="https://www1.cs.ucr.edu/undergraduate/course-listings/">Course Offerings</a>
         <a href="http://studentbcoe.ucr.acsitefactory.com/sites/g/files/rcwecm1536/files/2019-06/Breadth%20Requirements%206.12.19.pdf">Breadth Courses</a>
         <a href="https://degreeworks.ucr.edu/dashboard/dashboard">Degree Audit</a>
-        <a href="https://calendar.google.com/calendar/r">Google Calendar</a>
     </div>
 
     <div id="myPreferencesNav" class="rightsidenav">
@@ -104,20 +86,32 @@
         document.getElementById("calendar").src = "https://www.google.com/calendar/embed?src=" + userEmail + "&ctz=America%2FLosAngeles";      
     </script>
 
-    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="/__/firebase/7.9.3/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <script src="/__/firebase/7.9.3/firebase-analytics.js"></script>
-
-    <!-- Add Firebase products that you want to use -->
-    <script src="/__/firebase/7.9.3/firebase-auth.js"></script>
-    <script src="/__/firebase/7.9.3/firebase-firestore.js"></script>
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    <script>
+        var provider = new firebase.auth.GoogleAuthProvider();
+        provider.addScope('https://www.googleapis.com/auth/calendar');
+        firebase.auth().useDeviceLanguage();
+        provider.setCustomParameters({
+            'login_hint': 'user@ucr.edu'
+        });
+        firebase.auth().signInWithPopup(provider).then(function(result) {
+            if (result.credential) {
+                // This gives you a Google Access Token. You can use it to access the Google API.
+                var token = result.credential.accessToken;
+                // ...
+            }
+            // The signed-in user info.
+            var user = result.user;
+        }).catch(function(error) {
+            // Handle Errors here.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            // The email of the user's account used.
+            var email = error.email;
+            // The firebase.auth.AuthCredential type that was used.
+            var credential = error.credential;
+            // ...
+        });
+    </script>
 
 </body>
 </html>
