--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
                 signinButton.onclick = handleSignIn;
             }, function(error) {
-                appendPre(JSON.stringify(error, null, 2));
+                console.log(JSON.stringify(error, null, 2));
             });
         }
 
@@ -76,14 +76,14 @@
     </script>
 
     <!-- Firebase JS SDK -->
-    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
 
     <!-- Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-analytics.js"></script>
 
     <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-auth.js"></script>
 
     <script>
         // Your web app's Firebase configuration -- TODO: only auth ucr accounts
